# A.R.G.O.S-

./: .gitignore  README.md  app.py  apuntes.txt  argos.py  argos_devkit_memory.json  audio_filter.py  neo4j_knowledge_graph_core.py  neo4j_test.py  nvidiallm.py  pyproject.toml  realtime_manifest.md  requeriments.txt  requirements.txt  rpi4_testing.py  settings.json  train_dataset.jsonl  whisper.py
A.R.G.O.S front/: html  script.js  styles.css
ARGOS_development_kit/: argos_devkit.py  argos_devkit_memory.json
CEO/: CEO.py  instructions.md
CEO/tools/: deepseek-r1.py
Sintetizador/: app.py  data.json  resultados.json
Sintetizador/templates/: index.html
agents/ssh_agent_manager/tools/: ssh_manager.py
argos_training/: format_fragments.py  train_def.py
cognitive_core/: cognitive_core.py
config/: settings.json
docs/: Note.md
semantic_dissasembly-core/: gpt3.5_validation.jsonl  man7_scrapper.py  training_dataset.jsonl
shell_pilot/: shell_pilot.py  stop_ssh_server.sh
src/argos/agents/shell_pilot/: setup_ssh_server.sh
src/argos/core/cognitive/cognitive_core/: Note.md  cognitive_core.py  settings.json
src/argos/web/: routes.py
src/testing/: client.html  reformat.py  streaming.py  streaming.py.save
src/testing/dataset/: config.yaml
src/testing/dataset/dataset_part_000/: train_dataset.jsonl  upload_dataset.py
ssh_agent_manager/: __init__.py  instructions.md  ssh_agent.py
ssh_agent_manager/tools/: ssh_manager.py
static/css/: styles.css
static/js/: app.js  script.js
templates/: chat.html  main.html  main_interface.html
(+3 files in other folders)
